Tue Jan 16 20:35:18 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix creation of quartz databases in backendmanager: all tests should
	  now pass.

Tue Jan 16 20:28:46 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix quartztest so that the tables / databases get created.
	  Implement new test "create1" to check that creation of databases
	  works as specified.

	* Fix test for whether we are allowed to overwrite a database.

	* Implement much better logging from quartz when making new databases.

	* Clean up an error message from btree.cc

Tue Jan 16 19:24:49 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Don't display messages about allocation failures in the first
	  iteration: if the failures go away when repeating, we're not
	  interested.

Tue Jan 16 18:28:03 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Add two new OmSettings, for use when opening databases:
	  database_create and database_allow_overwrite.  The idea is that
	  databases will only be created if database_create is specified,
	  and that when they are being created an exception will be thrown
	  if there's an existing database unless database_allow_overwrite
	  is specified.

	* Implemented database_create and database_allow_overwrite for
	  Quartz, which is the only relevant type for now.  Note that this
	  breaks the testsuite, quite badly.

	* Add OmDatabaseCreateError, which is thrown when creating a database
	  fails.

Tue Jan 16 17:08:47 GMT 2001 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed a typo in -ldl detection

Tue Jan 16 15:15:30 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Remove OmNeedRecoveryError, and quartz's quartz_perform_recovery
	  parameter.  Quartz now always performs recovery if needed: there
	  is no need for this added complication.

	* Update TODO

Tue Jan 16 14:25:03 GMT 2001 Chris Emerson <chris.emerson@open.muscat.com>
